tests/NormalTests/paczka1/small_fuzzy/55981380.err
Error in line 2: A401 A775 49,8
Error in line 8: TQHw1L A936 73,2
Error in line 3: 68a A775 97,5
Error in line 11: TQHw1L A775 91,6
